[package]
name = "md_reader"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
eframe = "0.33.3"
egui = "0.33.3"
egui_commonmark = "0.22.0"
pulldown-cmark = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.50.0", features = ["full"] }
